react_webviews/src/common/theme/Style.scss
/* ... */
.his {
  margin: 0 -15px 0px -15px;
  padding: 0 15px 0 15px;
  overflow: hidden;
  overflow-x: scroll;
  .horizontal-images-scroll {
    display: flex;
    width: fit-content;
    .image {
      margin: 0 20px 0px 0;
      border-radius: 4px;
      display: block;
    }
  }
}

.common-top-bottom-title-light{
  color: #767e86;
  font-size: 13px;
  margin-bottom: 20px;
  transform: translateY(-45px);
}

#add_ons_bottom_text{
  font-size: 13px;
  color: #767E86;
  margin-top: 10px;
}

.OTP-title{
  justify-content: center !important;
}


.callback-button-container{
  margin: 40px 0;
}

.callback-button-container img{
  width: 100%;
  object-fit: cover;
}


.what-is-covered {
  background: #EEEEEE;
  color: #161A2E;
  padding: 10px 10px 10px 0;
  border-radius: 4px;
  margin: 10px 0 0 0;
  cursor: pointer;
  .top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0;
    height: 30px;
    margin-left: 20px;
    padding-left: 0;
  }

  .wic-title {
    font-size: 13px;
    font-weight: 500;
    font-weight: bold;
  }
  
  .content {
    margin: 20px 20px 0 20px;
    padding-left: 0;
  }

  

  .wic-tile {
    display: flex;
    align-items: baseline;
    margin: 15px 0 10px 5px;
    font-size: 12px;
      font-weight: 400;
      .circle {
        width: 8px;
        height: 8px;
        border-radius: 999px;
        background-color: #161A2E;
      }
      .wic-tile-right {
        margin: 0 0 0 10px;
        font-size: 13px;
        text-align: left;
        color: #161A2E;
      }
  }
  
  .wic-tile-right {
    margin: 0 0 0 5px;
    font-size: 13px;
    text-align: left;
  }
}
// --Iframe Container CSS Below--:
.childblockiframe{
  display: flex;
  flex-direction: row;
  overflow: scroll ;
  padding-top: 100px;
  overflow-x: hidden;
  height: 100%;
  padding-left: 80px;
  padding-right: 80px;
}

.childblockiframe-element-one{
  height: auto;
  text-align: left !important;
  position: relative;
  flex: 1 1 55%;
}

.imgiframe{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
}
  .childblockiframe-element-img{ 
    margin-bottom: 30%;
  }

.footer-iframe{
  background-color:  white;
  bottom: 0%;
  overflow: hidden;
  margin-top: auto;
}

@media (max-width: 900px) {
  .childblockiframe-element-one{
    width: 50%;
  }
}

@media (max-width: 425px) {
  .childblockiframe {
    flex-direction: column-reverse;
    height: auto;
    padding: 52px 0px 52px 0px;
  }
  .childblockiframe-element-one{
    width: 90%;
    margin-left: 5%;
    margin-right: 5%;
  }

  .childblockiframe-element-img{
    width: 200%;
    padding-top: 30%;
    margin-left: 100% !important;
    margin-bottom: 30px !important;
  }

  #iframeFooter{
    position: fixed !important;
    padding-top: 0px !important;
    padding-bottom: 0px !important;
  }
}

#iframeFooter{
  position: relative;
  margin: 0 auto;
  margin-bottom: 13px !important;
  padding-top: 20px;
  padding-bottom: 20px;
}

.Loaderiframe {
  background: #fff;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 200;
}

